changed to spring project